CIV-9772 Code Smell